syntax = "proto3";

package blog;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Chetas1/grpc-blog-service/proto";

service BlogService {
  rpc CreatePost(CreatePostRequest) returns (Post);
  rpc ReadPost(ReadPostRequest) returns (Post);
  rpc UpdatePost(UpdatePostRequest) returns (Post);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}

message Post {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  google.protobuf.Timestamp publication_date = 5;
  repeated string tags = 6;
}

message ReadAllRequest {}

message ReadAllResponse {
  repeated Post posts = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
  google.protobuf.Timestamp publication_date = 4;
  repeated string tags = 5;
}

message ReadPostRequest {
  string post_id = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  repeated string tags = 5;
}

message DeletePostRequest {
  string post_id = 1;
}

message DeletePostResponse {
  bool success = 1;
  string message = 2;
}
